# tridirt

./: README.md  pyproject.toml
src/tridirt/: __main__.py
tridme/: __main__.py
